--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "vite.config.ts", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
-  ],
+  "installCommand": "npm install --legacy-peer-deps",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
