--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emoji-mart/react": "^1.1.1",
     "canvas-confetti": "^1.9.4",
     "emoji-mart": "^5.6.0",
+    "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0"
