--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@vercel/postgres": "^0.10.0",
     "canvas-confetti": "^1.9.4",
     "emoji-mart": "^5.6.0",
     "localforage": "^1.10.0",
