--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@vercel/postgres": "^0.10.0",
+    "canvas-confetti": "^1.9.4",
     "emoji-mart": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
